--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
     --c-1: #0d3f68;
     --c-2: #fddd3a;
     --c-3: #00a4f0;
@@ -22,4 +22,4 @@ body, html {
     margin: 0;
     padding: 0;
     background-color: var(--c-bg-d);
-}
+} */
