--- a/src/components/Configurator/Configurator.less
+++ b/src/components/Configurator/Configurator.less
@@ -1,5 +1,6 @@
 .debug-header {
     background-color: #0008;
+    display: flex;
     margin-bottom: 1em;
     padding: 1em;
     
@@ -11,23 +12,21 @@
 
 .configurator {
     &__footer {
-        background-color: var(--c-bg-l);
-        bottom: 0;
-        position: fixed;
         padding-block: 1em;
-        width: 100%;
     }
 
     &__nav {
         display: flex;
-        justify-content: space-between;
         margin-inline: auto;
-        width: var(--page-col-w);
     }
 }
 
-.step {
-    padding-bottom: 4rem;
-    margin-inline: auto;
-    width: var(--page-col-w);
+.feature {
+    padding-left: 1em;
+
+    &--top {
+        border: 1px solid;
+        margin-block: 0.5em;
+        padding-block: 0.5em;
+    }
 }
