--- a/src/components/Configurator/Configurator.less
+++ b/src/components/Configurator/Configurator.less
@@ -15,6 +15,12 @@
         padding-block: 1em;
     }
 
+    &__total {
+        border: 1px dashed;
+        margin-block: 0.5em;
+        padding: 0.5em 1em;
+    }
+
     &__nav {
         display: flex;
         margin-inline: auto;
