--- a/src/components/Configurator/Configurator.css
+++ b/src/components/Configurator/Configurator.css
@@ -17,8 +17,13 @@
   padding: 0.5em 1em;
 }
 .configurator__nav {
-  display: flex;
+  display: grid;
+  gap: 0.5em;
+  grid-template-columns: repeat(4, 1fr);
   margin-inline: auto;
+}
+.configurator__nav-btn {
+  grid-column: span 2;
 }
 .feature {
   padding-left: 1em;
@@ -27,4 +32,14 @@
   border: 1px solid;
   margin-block: 0.5em;
   padding-block: 0.5em;
+}
+.btn {
+  border: 1px solid;
+  cursor: pointer;
+  padding: 1em;
+  text-align: center;
+}
+.btn--inactive {
+  pointer-events: none;
+  opacity: 0.5;
 }
