--- a/src/components/Configurator/Configurator.less
+++ b/src/components/Configurator/Configurator.less
@@ -22,8 +22,14 @@
     }
 
     &__nav {
-        display: flex;
+        display: grid;
+        gap: 0.5em;
+        grid-template-columns: repeat(4, 1fr);
         margin-inline: auto;
+    }
+
+    &__nav-btn {
+        grid-column: span 2;
     }
 }
 
@@ -34,5 +40,17 @@
         border: 1px solid;
         margin-block: 0.5em;
         padding-block: 0.5em;
+    }
+}
+
+.btn {
+    border: 1px solid;
+    cursor: pointer;
+    padding: 1em;
+    text-align: center;
+
+    &--inactive {
+        pointer-events: none;
+        opacity: 0.5;
     }
 }
